# signal_acquisition

./: AbstractThread.h  CMakeLists.txt  adeSIL_Config  collector.cpp  collector.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  signal_acquisition.pro  singal_acquisition.pro
ADC/: ads1115.h  wiringPi.h
Execution/: adeSIL_Config
Utility/: SL_Data.h  SL_Data_linux.cpp  TimerFunction.cpp  TimerFunction.h  configuration.cpp  ext.h  savemanager.cpp  savemanager.h
